--- a/css/styles.css
+++ b/css/styles.css
@@ -100,7 +100,7 @@ body::-webkit-scrollbar{
 
 .hero-image img{
   position: relative;
-  height: 75%;
+  min-height: 50%;
   width: 69%; 
   margin-left: 5rem;
   object-fit: cover; 
@@ -109,6 +109,7 @@ body::-webkit-scrollbar{
   border: 4px solid var(--color2);
   transform: rotate(-1deg);
   box-shadow: 0 0 20px rgba(200, 200, 200, 0.6);
+  filter: brightness(0.9) contrast(1.05) saturate(0.95);
 }
 
 .hero-text{
